--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,3 +1,17 @@
+.wbwpf-filters{
+  .loading{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    z-index: 10001;
+    text-align: center;
+    background-size: 50px 50px;
+    background: #fff url("../../dist/images/ring-alt.svg") no-repeat center;
+  }
+}
+
 ul.products{
   .wbwpf-product-wrapper{
     float: left;
