Loading behavior finalized

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,6 +1,7 @@
 .wbwpf-filters{
   .filters-loading{
     position: absolute;
+    padding: 10px;
     width: 100%;
     height: 100px;
     top: 0;
