--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,17 +1,43 @@
 @import "admin";
 
 .wbwpf-filters{
+  .filters-list{
+    position: relative;
+  }
   .filters-loading{
     position: absolute;
     padding: 10px;
     width: 100%;
-    height: 100px;
+    height: 100%;
     top: 0;
     left: 0;
     z-index: 10001;
     text-align: center;
-    background-size: 50px 50px;
-    background: #fff url("../../dist/images/ring-alt.svg") no-repeat center;
+    //background-size: 50px 50px;
+    //background: #fff url("../../dist/images/ring-alt.svg") no-repeat center;
+    background-color: #fff;
+    opacity: 0.5;
+  }
+}
+
+.wbwpf-product-list{
+
+  .wbwpf-product-list-wrapper{
+    position: relative;
+    .products-loading{
+      position: absolute;
+      padding: 10px;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 10001;
+      text-align: center;
+      //background-size: 50px 50px;
+      //background: #fff url("../../dist/images/ring-alt.svg") no-repeat center;
+      background-color: #fff;
+      opacity: 0.5;
+    }
   }
 }
 
