First slider attemps

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import "admin";
 
+@import "../../../node_modules/nouislider/distribute/nouislider.css";
+
 .wbwpf-filters{
   .filters-list{
     position: relative;
